# cds-dojson

./: .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  docker-compose.yml  pytest.ini  requirements-dev.txt  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish.yml  tests.yml
cds_dojson/: __init__.py  cli.py  matcher.py  migrator.py  overdo.py  query.py  utils.py  version.py
cds_dojson/marc21/: __init__.py  utils.py
cds_dojson/marc21/fields/: __init__.py  album.py  base.py  image.py  utils.py  video.py
cds_dojson/marc21/fields/books/: __init__.py  base.py  book.py  errors.py  journal.py  multipart.py  serial.py  series.py  standard.py  utils.py  values_mapping.py
cds_dojson/marc21/fields/default/: bd01x09x.py  bd2xx.py  bd5xx.py  bd69x.py  bd6xx.py  bd7xx.py  bd8xx.py  bd9xx.py
cds_dojson/marc21/fields/rdm/: __init__.py  base.py  summer_student_report.py
cds_dojson/marc21/fields/videos/: __init__.py  base.py  project.py  utils.py  video.py
cds_dojson/marc21/models/: __init__.py  album.py  base.py  default.py  image.py  video.py
cds_dojson/marc21/models/books/: __init__.py  base.py  book.py  journal.py  multipart.py  serial.py  series.py  standard.py
cds_dojson/marc21/models/rdm/: __init__.py  base.py  summer_student_report.py
cds_dojson/marc21/models/videos/: __init__.py  base.py  project.py  video.py
cds_dojson/marc21/schemas/marc21/cds_bibliographic/: bd6xx.json  bd7xx.json  bd9xx.json  default-v1.0.0.json  video-v1.0.0.json
cds_dojson/schemas/: __init__.py  tranform.py  transform.py
cds_dojson/schemas/books/elements/: additional_subject_categories.json  document_type.json
cds_dojson/schemas/books/jsons/: holding.json
cds_dojson/schemas/books/jsons/elements/: degree_type.json  related_record.json  source.json  sourced_value.json
cds_dojson/schemas/books/ymls/: books-proc-stds.yml  holding.yml
cds_dojson/schemas/books/ymls/elements/: additional_subject_categories.yml  arxiv_categories.yml  (+9 more)
cds_dojson/schemas/categories/: category-v1.0.0.json
cds_dojson/schemas/deposits/: deposit-cds-v1.0.0.json  deposit-v1.0.0.json
cds_dojson/schemas/deposits/records/: base-v1.0.0.json  project-v1.0.0.json  project_src-v1.0.0.json  video-v1.0.0.json  video_src-v1.0.0.json
cds_dojson/schemas/keywords/: keyword-v1.0.0.json
cds_dojson/schemas/records/: base-v1.0.0.json  definitions-v1.0.0.json  project-v1.0.0.json  project_src-v1.0.0.json  video-v1.0.0.json  video_src-v1.0.0.json
cds_dojson/schemas/records-files/: records-files-cds-v1.0.0.json
cds_dojson/to_marc21/: __init__.py
cds_dojson/to_marc21/fields/: __init__.py  album.py  image.py  video.py
cds_dojson/to_marc21/fields/default/: __init__.py  bd01x09x.py  bd2xx.py  bd5xx.py  bd69x.py  bd6xx.py  bd7xx.py  bd8xx.py  bd9xx.py
cds_dojson/to_marc21/models/: __init__.py  album.py  default.py  image.py  video.py
docs/: conf.py  index.rst
tests/: conftest.py  helpers.py  record.xml  test_base.py  test_books.py  test_cds_dojson.py  test_cds_dojson_album.py  test_cds_dojson_image.py  test_cds_dojson_video.py  test_cds_to_marc21_fields_default.py  test_cli.py  test_fields_utils.py  test_journals.py  test_matcher.py  test_series.py  test_standard.py  test_utils.py  test_videos_project.py  test_videos_video.py  testutils.py
tests/demo/: __init__.py  json_resolver.py
tests/fixtures/: base.xml  video.xml  videos_project.xml  videos_video.xml
tests/fixtures/books/: books_book1.xml  books_book2.xml
(+64 files in other folders)
