# This file is part of CDS-DoJSON
# Copyright (C) 2015-2024 CERN.
#
# CDS-DoJSON is free software; you can redistribute it and/or
# modify it under the terms of the Revised BSD License; see LICENSE
# file for more details.
[metadata]
name = cds-dojson
version = attr: cds_dojson.__version__

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    arrow>=0.7.0
    dojson>=1.3.2
    invenio-query-parser>=0.5.0
    requests>=2.17.3
    pycountry>=17.5.14
    PyYAML>=3.13
    python-dateutil>=2.7.3

[options.extras_require]
tests =
    check-manifest>=0.25
    coverage>=5.3,<6
    invenio-jsonschemas>=1.0.0a5,<1.1.2
    jsonpatch>=1.11
    jsonref>=0.1
    jsonresolver>=0.1.0
    jsonschema>=2.5.1
    mock>=1.3.0
    pytest-runner>=2.6.2
    pydocstyle>=1.0.0
    pycodestyle>=1.0.0
    pytest-cache>=1.0
    pytest-cov>=2.10.1
    pytest-isort>=1.2.0
    pytest-pep8>=1.0.6
    pytest>=4.0.0
    pycountry>=17.5.14
    Sphinx>=1.3
docs =
    Sphinx>=1.3

[options.entry_points]
cds_dojson.marc21.parent_models =
    books_serial = cds_dojson.marc21.models.books.serial:model
    books_multipart = cds_dojson.marc21.models.books.multipart:model
    journal = cds_dojson.marc21.models.books.journal:model
cds_dojson.marc21.models =
    videos_video = cds_dojson.marc21.models.videos.video:model
    videos_project = cds_dojson.marc21.models.videos.project:model
    books_book = cds_dojson.marc21.models.books.book:model
    books_standard = cds_dojson.marc21.models.books.standard:model
cds_dojson.marc21.base =
    base = cds_dojson.marc21.fields.base
cds_dojson.marc21.videos =
    base = cds_dojson.marc21.fields.videos.base
cds_dojson.marc21.video =
    video = cds_dojson.marc21.fields.videos.video
    project = cds_dojson.marc21.fields.videos.project
cds_dojson.marc21.books =
    base = cds_dojson.marc21.fields.books.base
cds_dojson.marc21.book =
    book = cds_dojson.marc21.fields.books.book
    standard = cds_dojson.marc21.fields.books.standard
cds_dojson.marc21.series =
    serial = cds_dojson.marc21.fields.books.serial
    multipart = cds_dojson.marc21.fields.books.multipart
    journal = cds_dojson.marc21.fields.books.journal
# DoJSON entry points
console_scripts =
    cds-dojson=cds_dojson.cli:cli
dojson.cli.rule =
    cds_marc21 = cds_dojson.marc21:marc21
    cds_to_marc21 = cds_dojson.to_marc21:to_marc21
dojson.cli.load =
    cds_marcxml = cds_dojson.marc21.utils:load
invenio_jsonschemas.testschemas =
    cds = cds_dojson.schemas

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = cds_migrator_kit/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = cds_migrator_kit/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = cds_migrator_kit/translations/messages.pot
output-dir = cds_migrator_kit/translations/

[update_catalog]
input-file = cds_migrator_kit/translations/messages.pot
output-dir = cds_migrator_kit/translations/

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=cds_migrator_kit --cov-report=term-missing
testpaths = tests cds_migrator_kit
live_server_scope = module

[pycodestyle]
exclude = docs/conf.py,tests/*
